# personal-blog

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
about/: index.html
docs/: about.md  index.md  tags.md
docs/posts/: 2024-01-15-setting-up-mkdocs-blog.md  2025-06-04-springboot-auth-microservice.md  2025-06-14-social-media-detox-and-personal-growth.md  2025-06-15-whats-the-best-way-to-practice-leetcode.md  2025-06-16-a-walkthrough-of-understanding-a-new-codebase-at-work.md  2025-06-16-how-to-understand-a-new-codebase.md  2025-06-26-how-to-learn-with-ai-without-cognitive-decline.md  index.md
posts/: index.html
posts/2024-01-15-setting-up-mkdocs-blog/: index.html
posts/2025-06-04-springboot-auth-microservice/: index.html
posts/2025-06-14-social-media-detox-and-personal-growth/: index.html
posts/2025-06-15-whats-the-best-way-to-practice-leetcode/: index.html
posts/2025-06-16-a-walkthrough-of-understanding-a-new-codebase-at-work/: index.html
posts/2025-06-16-how-to-understand-a-new-codebase/: index.html
posts/2025-06-26-how-to-learn-with-ai-without-cognitive-decline/: index.html
search/: search_index.json
tags/: index.html
