[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-blog"
version = "0.1.0"
description = "Gabryel's personal learning blog built with MkDocs Material"
authors = [{name = "Gabryel Soh", email = "gabryelsoh@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-committers-plugin-2>=2.2.0",
    "mkdocs-rss-plugin>=1.12.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88 